# blp-thumb-win-rs

./: .gitignore  Cargo.toml  README.md  build-only.sh  build-publish.sh  build-setting.sh  build-settings.sh  build.rs
preview/: PROMPT.md
src/: class_factory.rs  dll_export.rs  keys.rs  lib.rs  log.rs  preview_handler.rs  thumbnail_provider.rs
src/utils/: create_hbitmap_bgra_premul.rs  guid.rs  mod.rs  resize_fit_rgba_rect.rs
